@@ -303,15 +303,16 @@ case $mode,$tag in
        # mktemp is used to create a temporary file; for systems that
        # lack support for mktemp, e.g. MinGW/MSYS, we use the common
        # trick of forging a filename based on the pid.
-       if test -z "@MKTEMP@"; then
-	   tmpfile=document.$$
-       else
-	   tmpfile=`mktemp document.XXXXXX` || exit 1
-       fi
-       trap "rm -f $tmpfile" 1 2 15
-       translate_boot_file $1 $tmpfile
-       grep 'ERROR IN' $tmpfile >/dev/null && { rm $tmpfile; exit 1; }
-       rm $tmpfile && exit 0
+       # if test -z "@MKTEMP@"; then
+       #   tmpfile=document.$$
+       # else
+       #   tmpfile=`mktemp document.XXXXXX` || exit 1
+       # fi
+       # trap "rm -f $tmpfile" 1 2 15
+       translate_boot_file $1
+       exit 0
+       # grep 'ERROR IN' $tmpfile >/dev/null && { rm $tmpfile; exit 1; }
+       # rm $tmpfile && exit 0
        ;;
 
     compile,lisp)
