@@ -1,3 +1,9 @@
+2009-10-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/scripts/document.in: Comment out buggy code.
+	src/lisp/Makefile.in, configure.ac: Fixes for sbcl on
+	Windows.
+
 2009-10-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/*: Whitspace cleanup.
